--- a/index.html
+++ b/index.html
@@ -51,15 +51,11 @@
     </div>
 </div>
 
+<div class="back"></div>
 
-
-<div class="back" style="display: none;"></div>
-
-<div class="back">
-
+<div class="giga">
+    test
 </div>
-
-
 
 </body>
 </html>
