--- a/index.html
+++ b/index.html
@@ -19,12 +19,18 @@
    </div>
    <div class="navigation-new">
     <ul>
-        <li><a href="index.html"> მთავარი</a></li>
-        <li><a href="index.html"> ჩვენ შესახებ</a></li>
-        <li><a href="index.html"> მომსახურება</a></li>
-        <li><a href="index.html"> პროექტი</a></li>
-        <li><a href="index.html"> კონტაქთტი</a></li>
+        <li><a href="index.html"> Home</a></li>
+        <li><a href="index.html"> About US</a></li>
+        <li><a href="index.html"> Service</a></li>
+        <li><a href="index.html"> Project</a></li>
+        
     </ul>
+           
+    <div class="container">
+        <img  style="width:100%">
+        <button class="btn">Contact Us</button>
+      </div>
+
    </div>
    <ul class="social-new">
      <li>
@@ -33,7 +39,7 @@
         </a>
       </li>
      <li>
-        <a href="a">
+        <a href="https://www.facebook.com/autoimportgeorgia1">
             <img src="img/Vector.svg">
         </a>
        </li>
@@ -50,12 +56,49 @@
 
     </div>
 </div>
-
+   
 <div class="back"></div>
+<div class="square1"></div>
+<h2 class="minetxt">AUTO IMPORT GEORGIA</h2>
 
-<div class="giga">
-    test
+<div class="square2"></div>
+
+<h2 class="minetxt2"><font color="#D9042B">Your</font><br> gateway to any<br> destination in the world</h2>
+
+<button class="btn2">Learn More</button></div>
+
+<div class="square3">
+
+   <img src="img/depositphotos_312323088-stock-photo-transportation-and-logistics-of-container.jpg" class="imgs">
+
+
+   <div class="square4">
+    <div class="numb"><h2>9.6M +</h2></div>
+    <div class="txts"><h2>Delivered Goods</h2></div>
+    <img src="img/Azure Container Apps.svg" class="imgs2">
+   </div>  
+
+   <div class="bec"><h3>WHY CHOOSE US</h3></div>
+   <div class="txts2"><h3>We <font color="#D9042B">Export & Import Goods</font><br> all Over The World</h3></div>
+   <div class="texts"><h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam iaculis vulputate dui at fringilla.<br> Pellentesque volutpat ipsum dolor, vitae venenatis dolor posuere quis.</h3></div>
+   <div class="texts2"><h3>In vel orci id magna vulputate iaculis. Donec a ex eget ex pretium consectetur at non elit. Suspendisse <br>justo ante, mollis a ornare vitae, vestibulum quis lacus. Phasellus eget orci eu libero sodales convallis.<br>Donec vel purus laoreet, mattis metus ac, lacinia orci.</h3></div>
+
+<div>
+   <button class="btn3"></button></div>
+   <h2 class="bttxt">Live Chat 24 Hours</h2>
 </div>
+
+
+<div>
+    <button class="btn4"></button></div>
+    <h2 class="bttxts">Live Chat 24 Hours</h2>
+ </div>
+
+
+</div>
+
+
+
 
 </body>
 </html>
