--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
    <div class="navigation-new">
     <ul>
         <li><a href="index.html"> Home</a></li>
-        <li><a href="file:///C:/Users/admin/Desktop/hedder/about.html"> About US</a></li>
-        <li><a href="file:///C:/Users/admin/Desktop/hedder/service.html"> Service</a></li>
+        <li><a href="#"> About US</a></li>
+        <li><a href="#"> Service</a></li>
         <li><a href="index.html"> Project</a></li>
         
     </ul>
@@ -30,9 +30,9 @@
     <div class="container">
         <img  style="width:100%">
 
-        <a href="calculator.html"<button  class="btn" type="button" onclick="document.location='contact.html'"> CALCULATOR</button>
+        <a href="calculator.html"<button  class="btn" type="button" onclick="document.location='calculator.html'"> CALCULATOR</button>
 
-        <a href="file:///C:/Users/admin/Desktop/AIG-Nimushi/calculator.html"<button  class="btn" type="button" onclick="document.location='contact.html'"> CALCULATOR</button>
+     
 
       </div>
 
