--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="container">
         <img  style="width:100%">
 
-        <a href="calculator.html"<button  class="btn" type="button" onclick="document.location='calculator.html'"> CALCULATOR</button>
+        <button  class="btn" type="button" onclick="document.location='calculator.html'"> CALCULATOR</button>
 
      
 
